[gd_scene load_steps=34 format=2]

[ext_resource path="res://Characters/NPC/PNG/Merchant.png" type="Texture" id=1]
[ext_resource path="res://Characters/Player/Player.gd" type="Script" id=2]
[ext_resource path="res://GUI/Theme/png/DialogBackPanel.tres" type="StyleBox" id=3]
[ext_resource path="res://GUI/Theme/png/DialogLeftButton.png" type="Texture" id=4]
[ext_resource path="res://GUI/Theme/png/dialogNonSelected.png" type="Texture" id=5]
[ext_resource path="res://GUI/Theme/png/dialogSelected.png" type="Texture" id=6]
[ext_resource path="res://Characters/Player/TextBox.gd" type="Script" id=7]
[ext_resource path="res://GUI/Fonts/DefaultFont_size14.tres" type="DynamicFont" id=8]

[sub_resource type="CapsuleShape2D" id=1]
radius = 6.99999
height = 6.00003

[sub_resource type="Animation" id=2]
resource_name = "IdleDown"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=3]
resource_name = "IdleLeft"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 13 ]
}

[sub_resource type="Animation" id=4]
resource_name = "IdleRight"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 16 ]
}

[sub_resource type="Animation" id=5]
resource_name = "IdleUp"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 24 ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[sub_resource type="Animation" id=7]
resource_name = "RunDown"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=8]
resource_name = "RunLeft"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15 ]
}

[sub_resource type="Animation" id=9]
resource_name = "RunRight"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 20, 21, 22, 23 ]
}

[sub_resource type="Animation" id=10]
resource_name = "RunUp"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 28, 29, 30, 31 ]
}

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "IdleRight"

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "IdleDown"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "IdleUp"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "IdleLeft"

[sub_resource type="AnimationNodeBlendSpace2D" id=11]
blend_point_0/node = SubResource( 14 )
blend_point_0/pos = Vector2( 1, 0 )
blend_point_1/node = SubResource( 15 )
blend_point_1/pos = Vector2( 0, 1.1 )
blend_point_2/node = SubResource( 16 )
blend_point_2/pos = Vector2( 0, -1.1 )
blend_point_3/node = SubResource( 17 )
blend_point_3/pos = Vector2( -1, 0 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "RunDown"

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "RunUp"

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "RunRight"

[sub_resource type="AnimationNodeAnimation" id=21]
animation = "RunLeft"

[sub_resource type="AnimationNodeBlendSpace2D" id=22]
blend_point_0/node = SubResource( 18 )
blend_point_0/pos = Vector2( 0, 1.1 )
blend_point_1/node = SubResource( 19 )
blend_point_1/pos = Vector2( 0, -1.1 )
blend_point_2/node = SubResource( 20 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 21 )
blend_point_3/pos = Vector2( -1, 0 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=23]

[sub_resource type="AnimationNodeStateMachineTransition" id=24]

[sub_resource type="AnimationNodeStateMachine" id=12]
states/Idle/node = SubResource( 11 )
states/Idle/position = Vector2( 311, 59 )
states/Run/node = SubResource( 22 )
states/Run/position = Vector2( 492, 59 )
transitions = [ "Idle", "Run", SubResource( 23 ), "Run", "Idle", SubResource( 24 ) ]
start_node = "Idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=13]

[sub_resource type="StyleBoxTexture" id=25]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 15, 18 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 3
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -29 )
texture = ExtResource( 1 )
hframes = 8
vframes = 4
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/IdleDown = SubResource( 2 )
anims/IdleLeft = SubResource( 3 )
anims/IdleRight = SubResource( 4 )
anims/IdleUp = SubResource( 5 )
anims/RESET = SubResource( 6 )
anims/RunDown = SubResource( 7 )
anims/RunLeft = SubResource( 8 )
anims/RunRight = SubResource( 9 )
anims/RunUp = SubResource( 10 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 12 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 13 )
parameters/Idle/blend_position = Vector2( 0, 0 )
parameters/Run/blend_position = Vector2( 0, 0 )

[node name="TextBox" type="Node2D" parent="."]
position = Vector2( 0, -57 )
script = ExtResource( 7 )

[node name="BackPanel" type="PanelContainer" parent="TextBox"]
self_modulate = Color( 0.14902, 0.168627, 0.266667, 1 )
margin_left = -50.0
margin_top = -43.0
margin_right = 50.0
margin_bottom = -12.0
custom_styles/panel = ExtResource( 3 )

[node name="Speach1" type="RichTextLabel" parent="TextBox/BackPanel"]
margin_left = 6.0
margin_top = 6.0
margin_right = 94.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_fonts/normal_font = ExtResource( 8 )
bbcode_enabled = true
bbcode_text = "Привет"
text = "Привет"
fit_content_height = true
scroll_active = false

[node name="Speach2" type="RichTextLabel" parent="TextBox/BackPanel"]
margin_left = 6.0
margin_top = 6.0
margin_right = 94.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_fonts/normal_font = ExtResource( 8 )
bbcode_enabled = true
bbcode_text = "Привет"
text = "Привет"
fit_content_height = true
scroll_active = false

[node name="Speach3" type="RichTextLabel" parent="TextBox/BackPanel"]
margin_left = 6.0
margin_top = 6.0
margin_right = 94.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_fonts/normal_font = ExtResource( 8 )
bbcode_enabled = true
bbcode_text = "Привет"
text = "Привет"
fit_content_height = true
scroll_active = false

[node name="LeftButton" type="Button" parent="TextBox"]
self_modulate = Color( 0.14902, 0.168627, 0.266667, 1 )
margin_left = -39.0
margin_top = -8.0
margin_right = -24.0
margin_bottom = 10.0
custom_styles/hover = SubResource( 25 )
custom_styles/pressed = SubResource( 25 )
custom_styles/focus = SubResource( 25 )
custom_styles/disabled = SubResource( 25 )
custom_styles/normal = SubResource( 25 )

[node name="RightButton" type="Button" parent="TextBox"]
self_modulate = Color( 0.14902, 0.168627, 0.266667, 1 )
margin_left = 39.0
margin_top = -8.0
margin_right = 54.0
margin_bottom = 10.0
rect_scale = Vector2( -1, 1 )
custom_styles/hover = SubResource( 25 )
custom_styles/pressed = SubResource( 25 )
custom_styles/focus = SubResource( 25 )
custom_styles/disabled = SubResource( 25 )
custom_styles/normal = SubResource( 25 )

[node name="SelectContainer" type="HBoxContainer" parent="TextBox"]
margin_left = -20.0
margin_top = -5.0
margin_right = 20.0
margin_bottom = 4.0
alignment = 1

[node name="Select1" type="Control" parent="TextBox/SelectContainer"]
modulate = Color( 0.14902, 0.168627, 0.266667, 1 )
margin_left = 2.0
margin_right = 11.0
margin_bottom = 9.0
rect_min_size = Vector2( 9, 9 )

[node name="NonSelected" type="Sprite" parent="TextBox/SelectContainer/Select1"]
texture = ExtResource( 5 )
centered = false

[node name="Selected" type="Sprite" parent="TextBox/SelectContainer/Select1"]
texture = ExtResource( 6 )
centered = false

[node name="Select2" type="Control" parent="TextBox/SelectContainer"]
modulate = Color( 0.14902, 0.168627, 0.266667, 1 )
margin_left = 15.0
margin_right = 24.0
margin_bottom = 9.0
rect_min_size = Vector2( 9, 9 )

[node name="NonSelected" type="Sprite" parent="TextBox/SelectContainer/Select2"]
texture = ExtResource( 5 )
centered = false

[node name="Selected" type="Sprite" parent="TextBox/SelectContainer/Select2"]
visible = false
texture = ExtResource( 6 )
centered = false

[node name="Select3" type="Control" parent="TextBox/SelectContainer"]
modulate = Color( 0.14902, 0.168627, 0.266667, 1 )
margin_left = 28.0
margin_right = 37.0
margin_bottom = 9.0
rect_min_size = Vector2( 9, 9 )

[node name="NonSelected" type="Sprite" parent="TextBox/SelectContainer/Select3"]
texture = ExtResource( 5 )
centered = false

[node name="Selected" type="Sprite" parent="TextBox/SelectContainer/Select3"]
visible = false
texture = ExtResource( 6 )
centered = false

[node name="Timer" type="Timer" parent="TextBox"]

[connection signal="pressed" from="TextBox/LeftButton" to="TextBox" method="_on_LeftButton_pressed"]
[connection signal="pressed" from="TextBox/RightButton" to="TextBox" method="_on_RightButton_pressed"]
